[package]
name = "example"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
biscuit-auth = "4.1.1"
tokio = { version = "1.38.0", features = ["rt-multi-thread", "macros"] }
grpc-biscuit = { path = ".." }
prost = "0.12.6"
tonic = "0.11.0"

[build-dependencies]
tonic-build = "0.11.0"
